stateDiagram-v2
    direction LR

    [*] --> OrderProcessing

    state "Order Processing" as OrderProcessing {

        [*] --> idle

        state "Idle" as idle

        state "On hold" as on_hold

        state "Ops hold" as ops_hold
        note right of ops_hold
            Gate ops-team actions (suspend, release) behind an authorisation flag
        end note

        state "Cancelled" as cancelled

        state "Failed" as failed

        state "Success" as success

        state "Validation" as validation {
            [*] --> reviewing
            state "Reviewing" as reviewing
            state "Approved" as approved
            state "Rejected" as rejected
            reviewing --> approved : approve
            reviewing --> rejected : reject
            approved --> [*]
            rejected --> [*]
        }

        state "Fulfillment" as fulfillment {
            state "Inventory" as inventory {
                [*] --> checking
                state "Checking" as checking
                state "Reserved" as reserved
                state "Backordered" as backordered
                state "Stock review" as stock_review
                state "Partial stock" as partial_stock
                state "Allocated" as allocated
                state "Out of stock" as out_of_stock
                backordered --> stock_review : request_approval
                backordered --> reserved : stock_available
                checking --> backordered : backorder
                checking --> partial_stock : mark_partial
                checking --> reserved : reserve
                partial_stock --> allocated : accept_partial
                reserved --> allocated : allocate
                reserved --> out_of_stock : mark_unavailable
                stock_review --> reserved : approve_partial
                stock_review --> out_of_stock : decline_partial
                allocated --> [*]
                out_of_stock --> [*]
            }
            --
            state "Payment" as payment {
                [*] --> pay_hold
                state "Pay hold" as pay_hold
                note right of pay_hold
                    Constraint ①: block payment until soft-hold is confirmed
                end note
                state "Processing" as processing
                state "Authorized" as authorized
                state "Declined" as declined
                pay_hold --> processing : process_payment [inventory_is_reserved]
                processing --> authorized : authorize
                processing --> declined : decline
                authorized --> [*]
                declined --> [*]
            }
            --
            state "Shipping" as shipping {
                state "[H]" as h
                [*] --> ship_hold
                state "Ship hold" as ship_hold
                note right of ship_hold
                    Constraint ②: shipping blocked until stock committed AND payment done
                end note
                state "Preparing" as preparing
                state "Ready" as ready
                state "In transit" as in_transit
                state "Delivered" as delivered
                state "Acknowledged" as acknowledged
                delivered --> acknowledged : acknowledge
                in_transit --> delivered : deliver
                preparing --> ready : mark_ready
                ready --> in_transit : dispatch
                ship_hold --> preparing : begin_shipping [ready_to_ship]
            }
        }

        fulfillment --> cancelled : cancel [before_dispatch]
        fulfillment --> success : complete [is_all_done]
        fulfillment --> failed : fail
        fulfillment --> on_hold : pause [before_dispatch]
        fulfillment --> ops_hold : suspend [before_dispatch, ops_only]
        idle --> cancelled : cancel
        idle --> validation : submit
        on_hold --> cancelled : cancel
        on_hold --> h : resume
        ops_hold --> cancelled : cancel [ops_only]
        ops_hold --> h : release [ops_only]
        validation --> cancelled : cancel
        validation --> fulfillment : start [is_approved]

        cancelled --> [*]
        failed --> [*]
        success --> [*]

    }

